# snake_libtorch_cuda8

./: CMakeLists.txt  README.md  example-app.cpp
